--- a/app/src/main/res/layout/test_form_fragment_activity.xml
+++ b/app/src/main/res/layout/test_form_fragment_activity.xml
@@ -2,10 +2,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/container"
-    android:layout_margin="16dp"
-    tools:context="com.trufla.androidtruformssample.TestFormFragment">
+    tools:context="com.trufla.androidtruformssample.TestFormActivity">
 </FrameLayout>
