--- a/app/src/main/res/layout/test_form_activity.xml
+++ b/app/src/main/res/layout/test_form_activity.xml
@@ -59,6 +59,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="The Submitted Data" />
+            android:hint="The Submitted Data" />
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
