--- a/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
@@ -72,4 +72,11 @@
             android:layout_gravity="top|end"
             app:srcCompat="@drawable/ic_remove_circle_white_24dp" />
     </android.support.v7.widget.CardView>
+    <TextView
+        android:id="@+id/txt_error"
+        android:text="This field cannot be empty"
+        android:visibility="gone"
+        android:textColor="@android:color/holo_red_dark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
