--- a/android-tru-forms/src/main/res/layout/tru_string_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_string_view.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.TextInputLayout
+<android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/input_view_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <android.support.design.widget.TextInputEditText
         android:id="@+id/input_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
         tools:hint="this is hint"
-        android:inputType="text"
         tools:text="" />
 </android.support.design.widget.TextInputLayout>
