--- a/android-tru-forms/src/main/res/layout/activity_tru_form.xml
+++ b/android-tru-forms/src/main/res/layout/activity_tru_form.xml
@@ -20,10 +20,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/submit_btn"
-            android:layout_width="328dp"
-            android:layout_height="36dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:layout_margin="16dp"
             android:background="@color/colorAccent"
