--- a/android-tru-forms/src/main/res/layout/tru_array_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_array_view.xml
@@ -22,6 +22,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/add_item_img"
         android:layout_width="wrap_content"
+        android:backgroundTint="@color/colorPrimary"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="8dp"
