--- a/android-tru-forms/src/main/res/layout/tru_enum_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_enum_view.xml
@@ -27,13 +27,14 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:hint="Hello">
 
         <androidx.appcompat.widget.AppCompatAutoCompleteTextView
             android:id="@+id/editText"
-            android:inputType="none"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:cursorVisible="false" />
+            android:cursorVisible="false"
+            android:inputType="none" />
     </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
