--- a/android-tru-forms/src/main/res/layout/tru_location_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_location_pick_view.xml
@@ -1,38 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_view_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        app:endIconMode="custom"
+        app:endIconDrawable="@drawable/ic_location_on_black_24dp"
+        android:layout_height="wrap_content">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_view_container"
-            android:layout_width="0dp"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_data"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="6">
+            android:gravity="center_vertical"
+            tools:hint="this is hint"
+            tools:text="" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/input_data"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                tools:hint="this is hint"
-                tools:text="" />
-        </com.google.android.material.textfield.TextInputLayout>
+    <!--    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--        xmlns:tools="http://schemas.android.com/tools"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:orientation="horizontal">-->
 
-        <ImageView
-            android:id="@+id/picker"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center_vertical"
-            app:srcCompat="@drawable/ic_location_on_black_24dp" />
-    </LinearLayout>
+    <!--        <com.google.android.material.textfield.TextInputLayout-->
+    <!--            android:id="@+id/input_view_container"-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_weight="6">-->
+
+    <!--            <com.google.android.material.textfield.TextInputEditText-->
+    <!--                android:id="@+id/input_data"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:gravity="center_vertical"-->
+    <!--                tools:hint="this is hint"-->
+    <!--                tools:text="" />-->
+    <!--        </com.google.android.material.textfield.TextInputLayout>-->
+
+    <!--        <ImageView-->
+    <!--            android:layout_width="32dp"-->
+    <!--            android:layout_height="32dp"-->
+    <!--            android:layout_gravity="center_vertical"-->
+    <!--            app:srcCompat="@drawable/ic_location_on_black_24dp" />-->
+    <!--    </LinearLayout>-->
 </LinearLayout>
