--- a/android-tru-forms/src/main/res/layout/tru_array_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_array_view.xml
@@ -30,7 +30,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:textColor="@android:color/white"
-            android:text="Add More"
+            android:text="@string/add_more"
             android:layout_gravity="center_vertical" />
     </LinearLayout>
 
