--- a/android-tru-forms/src/main/res/layout/tru_section_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_section_view.xml
@@ -15,6 +15,7 @@
         android:layout_marginLeft="@dimen/mtrl_card_spacing"
         android:layout_marginTop="@dimen/mtrl_card_spacing"
         android:layout_marginRight="@dimen/mtrl_card_spacing"
+        android:layout_marginBottom="@dimen/mtrl_card_spacing"
         app:cardElevation="4dp"
         android:minHeight="44dp">
 
