--- a/android-tru-forms/src/main/res/layout/activity_tru_form.xml
+++ b/android-tru-forms/src/main/res/layout/activity_tru_form.xml
@@ -28,7 +28,7 @@
             android:layout_margin="16dp"
             android:background="@color/colorAccent"
             android:onClick="onSubmitClicked"
-            android:text="Submit"
+            android:text="@string/submit"
             android:textColor="@android:color/white" />
     </LinearLayout>
 </ScrollView>
