--- a/android-tru-forms/src/main/res/layout/fragment_tru_form.xml
+++ b/android-tru-forms/src/main/res/layout/fragment_tru_form.xml
@@ -4,13 +4,12 @@
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/linear_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
@@ -26,7 +25,7 @@
             android:layout_gravity="bottom|center_horizontal"
             android:layout_margin="16dp"
             android:background="@color/colorAccent"
-            android:text="Submit"
+            android:text="@string/submit"
             android:textColor="@android:color/white" />
     </LinearLayout>
 </ScrollView>
