--- a/android-tru-forms/src/main/res/drawable/rounded_button.xml
+++ b/android-tru-forms/src/main/res/drawable/rounded_button.xml
@@ -3,10 +3,10 @@
     android:padding="16dp"
 
     android:shape="rectangle">
-    <solid android:color="@color/grey" />
+    <solid android:color="@color/colorPrimary" />
 
     <stroke
         android:width="1dp"
-        android:color="@color/grey" />
+        android:color="@color/colorPrimary" />
     <corners android:radius="2dp" />
 </shape>
