--- a/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        tools:text="Add Photo of Pink card" />
+        tools:text="*.PDF, JPG, PNG" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/photo_thumb_container"
