--- a/android-tru-forms/src/main/res/layout/photo_viewer.xml
+++ b/android-tru-forms/src/main/res/layout/photo_viewer.xml
@@ -8,7 +8,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.9">
+        android:layout_weight="0.9"
+        android:background="#ffffff">
 
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/photo_view"
