--- a/android-tru-forms/src/main/res/layout/tru_textarea_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_textarea_view.xml
@@ -5,14 +5,26 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/input_title"
+        android:text="title"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:visibility="visible"
+        android:textColor="@color/title_text_color"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_view_container"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="top|start"
-
-        >
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="6dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_data"
@@ -21,7 +33,6 @@
             android:gravity="top|start"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
-            tools:hint="this is hint"
             android:scrollbars="vertical"
             android:scrollbarSize="5dp"
             tools:text="" />
